Cambios generales, modificacion de gestion de archivos, destion de componentes, ejemplo de como hacer video clase interactiva.

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/crear.xhtml
@@ -26,7 +26,7 @@
                     <p:outputLabel for="nombre"  value="Nombre: " class=" Responsive"></p:outputLabel>
                     <p:inputText id="nombre" value="#{gestionArchivoMultimediaController.archivoNuevo.arNombre}"></p:inputText>
                     <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="estado" class=" Responsive" value="#{gestionArchivoMultimediaController.archivoNuevo.arEstado}">
+                    <p:selectOneMenu id="estado" class=" Responsive" value="#{gestionArchivoMultimediaController.archivoNuevo.arEstado}" tabindex="0">
                         <f:selectItem itemValue ="D" itemLabel="Disponible"/>
                         <f:selectItem itemValue="N" itemLabel="No Disponible"/>
                     </p:selectOneMenu>                
