--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/ver.xhtml
@@ -51,7 +51,7 @@
                         </p:media>
                     </c:when>
                     <c:otherwise>
-                        <p:media value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" player="quicktime" cache="false">
+                        <p:media value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" player="quicktime" cache="false" height="240" width="320">
                             <f:param name="autoPlay" value="true" />
                         </p:media>
                         <!--                        <video height="180" width="300" id="ourvideo" controls="true">
